# rag-project

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
src/rag/: embeddings.py  generator.py  main.py  pipeline.py  retriever.py  router.py  semantic_cache.py
src/ui/: app.py
src/utils/: config.py  logging.py
