[tool.poetry]
name = "rag-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.45.1"
langchain = "^0.3.25"
openai = "^1.82.0"
faiss-cpu = "^1.11.0"
tiktoken = "^0.9.0"
pypdf = "^5.5.0"
python-pptx = "^1.0.2"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
